--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
-    <script src="util.js"></script>
-    <script src="escape-time.js"></script>
-    <script src="lyapunov.js"></script>
-    <script src="root-finding.js"></script>
-    <script src="pendulum.js"></script>
-    <script src="recursive.js"></script>
-    <script src="main.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/escape-time.js"></script>
+    <script src="js/lyapunov.js"></script>
+    <script src="js/root-finding.js"></script>
+    <script src="js/pendulum.js"></script>
+    <script src="js/recursive.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body onload="main()">
     <div class="main">
