--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body onload="main()">
     <div class="main">
-      <canvas id="fractal_canvas" width=1000px height=1000px style="max-height: 1000px"></canvas>
+      <canvas id="fractal_canvas" width=1000px height=1000px></canvas>
       <canvas id="path_canvas" width=1000px height=1000px></canvas>
       <div class="sidebar">
         <details open=true>
@@ -345,7 +345,7 @@
               <option value=1>Hue</option>
             </select>
             <hr>
-            <canvas id="exterior_gradient" class="gradient" data-init_min_colour="#000000" data-init_max_colour="#0000FF"></canvas>
+            <canvas id="exterior_gradient" class="gradient" data-init_min_colour="#FFFFFF" data-init_max_colour="#0000FF"></canvas>
           </details>
           <details>
             <summary>
