--- a/sources.html
+++ b/sources.html
@@ -33,6 +33,8 @@
             <a href="https://nathansolomon1678.github.io/fractals/">Julification</a>
             <br>
             <a href="https://www.youtube.com/watch?v=HeUpSzC1vzU">Even more escape time fractals</a>
+            <br>
+            <a href="https://softology.pro/Root-Finding_Fractals.txt">More root-finding methods</a>
         </p>
     </body>
 </html>
