more root finding work

--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@
               <option value=2 id="rtf_convergence_colouring">Convergence</option>
               <option value=3 id="rtf_max_orbit_dist_colouring">Max Orbit Distance</option>
               <option value=4 id="rtf_closest_root_dist_colouring">Closest Root Distance</option>
+              <option value=6 id="rtf_final_position">Final Position (Radial)</option>
             </select>
             <div id="rtf_dist_options" style="display: none">
               Modulo:
